[gd_scene load_steps=2 format=3 uid="uid://5mi2thhyfu2w"]

[ext_resource type="Script" uid="uid://dho8rhhvgm4kd" path="res://screens/pre_menu/pre_menu.gd" id="1_lpduj"]

[node name="PreMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpduj")

[node name="CreateNAmeLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 427.0
offset_top = 181.0
offset_right = 626.0
offset_bottom = 204.0
text = "INSERT YOUR NAME HERE"

[node name="CreateNameTextEdit" type="TextEdit" parent="CreateNAmeLabel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 29.0
offset_right = 199.0
offset_bottom = 75.0
placeholder_text = "Your Name Here"

[node name="GotoMenuBtn" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 495.0
offset_top = 480.0
offset_right = 612.0
offset_bottom = 579.0
text = "goto menu"

[connection signal="pressed" from="GotoMenuBtn" to="." method="_on_goto_menu_btn_pressed"]
